header section completed

--- a/index.html
+++ b/index.html
@@ -6,10 +6,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>World Cup 2022</title>
+    <!-- font awesome  -->
+    <script src="https://kit.fontawesome.com/05bf847d24.js" crossorigin="anonymous"></script>
+    <!-- style sheet css  -->
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
+    <!-- header section start  -->
+    <header class="container">
+        <div class="header-details">
+            <article class="article-info">
+                <div class="header-info">
+                    <h1 class="header-title">
+                        The Greatest <br> show on the <br> earth
+                    </h1>
+                    <p class="pragraph">Contrary to popular belief, Lorem Ipsum is not simply <br>
+                        random text. It has roots in a piece of classical Latin literature <br>
+                        from 45 BC, making it over 2000 years old.</p>
+                    <button class="button">Watch Live &nbsp; <span><i
+                                class="fa-solid fa-greater-than"></i></span></button>
+                </div>
+                <div class="header-image">
+                    <img src="assets/Banner Image.png" alt="">
+                </div>
+            </article>
+        </div>
+    </header>
 </body>
 
 </html>
