footer section completed

--- a/index.html
+++ b/index.html
@@ -33,6 +33,25 @@
             </article>
         </div>
     </header>
+
+    <!-- footer section  -->
+
+    <footer>
+        <div class="footer-info">
+            <h2 class="footer-title">Goal</h2>
+        </div>
+        <hr>
+        <div class="footer-menu">
+            <ul>
+                <li><a href="">Contact Us </a></li>
+                <li><a href="">Terms of Service </a></li>
+                <li><a href="">Privacy Policy </a></li>
+                <li><a href="">Privacy Settings </a></li>
+                <li><a href="">Goal App </a></li>
+                <li><a href="">Goal Live</a></li>
+            </ul>
+        </div>
+    </footer>
 </body>
 
 </html>
