main section completed

--- a/index.html
+++ b/index.html
@@ -15,24 +15,190 @@
 <body>
     <!-- header section start  -->
     <header class="container">
-        <div class="header-details">
-            <article class="article-info">
-                <div class="header-info">
-                    <h1 class="header-title">
-                        The Greatest <br> show on the <br> earth
-                    </h1>
-                    <p class="pragraph">Contrary to popular belief, Lorem Ipsum is not simply <br>
-                        random text. It has roots in a piece of classical Latin literature <br>
-                        from 45 BC, making it over 2000 years old.</p>
-                    <button class="button">Watch Live &nbsp; <span><i
-                                class="fa-solid fa-greater-than"></i></span></button>
-                </div>
-                <div class="header-image">
-                    <img src="assets/Banner Image.png" alt="">
-                </div>
-            </article>
-        </div>
+
+        <article class="article-info">
+            <div class="header-info">
+                <h1 class="header-title">
+                    The Greatest <br> show on the <br> earth
+                </h1>
+                <p class="pragraph">Contrary to popular belief, Lorem Ipsum is not simply <br>
+                    random text. It has roots in a piece of classical Latin literature <br>
+                    from 45 BC, making it over 2000 years old.</p>
+                <button class="button">Watch Live &nbsp; <span><i class="fa-solid fa-greater-than"></i></span></button>
+            </div>
+            <div class="header-image">
+                <img src="assets/Banner Image.png" alt="">
+            </div>
+        </article>
+
     </header>
+
+    <!-- main section  -->
+
+    <main class="main-container">
+        <div class="main-section">
+            <div class="main-side-bar">
+                <button class="site-button"><a href="">Upcoming Match</a></button>
+                <button class="site-button"><a href="">All Group</a></button>
+                <button class="site-button button-color"><a href="">Blog</a></button>
+            </div>
+            <div class="right-side-container">
+                <div class="right-side">
+                    <div class="thumbnail">
+                        <img src="assets/Blog Image.png" alt="">
+                        <div class="blogs-info">
+                            <button class="transfer-button">Transfer</button>
+                            <p class="paragraph">Transfer Live: Chlesea in talks <br>
+                                over Kimpenbe transfer</p>
+                            <div class="icon">
+                                <i class="fa-regular fa-clock"></i>
+                                <span>10h</span>
+                                &nbsp; &nbsp;
+                                <i class="fa-regular fa-comment-dots"></i>
+                                <span>23</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="right-side">
+                    <div class="thumbnail">
+                        <img src="assets/Blog Image.png" alt="">
+                        <div class="blogs-info">
+                            <button class="transfer-button">Transfer</button>
+                            <p class="paragraph">Transfer Live: Chlesea in talks <br>
+                                over Kimpenbe transfer</p>
+                            <div class="icon">
+                                <i class="fa-regular fa-clock"></i>
+                                <span>10h</span>
+                                &nbsp; &nbsp;
+                                <i class="fa-regular fa-comment-dots"></i>
+                                <span>23</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="right-side">
+                    <div class="thumbnail">
+                        <img src="assets/Blog Image.png" alt="">
+                        <div class="blogs-info">
+                            <button class="transfer-button">Transfer</button>
+                            <p class="paragraph">Transfer Live: Chlesea in talks <br>
+                                over Kimpenbe transfer</p>
+                            <div class="icon">
+                                <i class="fa-regular fa-clock"></i>
+                                <span>10h</span>
+                                &nbsp; &nbsp;
+                                <i class="fa-regular fa-comment-dots"></i>
+                                <span>23</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="right-side">
+                    <div class="thumbnail">
+                        <img src="assets/Blog Image.png" alt="">
+                        <div class="blogs-info">
+                            <button class="transfer-button">Transfer</button>
+                            <p class="paragraph">Transfer Live: Chlesea in talks <br>
+                                over Kimpenbe transfer</p>
+                            <div class="icon">
+                                <i class="fa-regular fa-clock"></i>
+                                <span>10h</span>
+                                &nbsp; &nbsp;
+                                <i class="fa-regular fa-comment-dots"></i>
+                                <span>23</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="right-side">
+                    <div class="thumbnail">
+                        <img src="assets/Blog Image.png" alt="">
+                        <div class="blogs-info">
+                            <button class="transfer-button">Transfer</button>
+                            <p class="paragraph">Transfer Live: Chlesea in talks <br>
+                                over Kimpenbe transfer</p>
+                            <div class="icon">
+                                <i class="fa-regular fa-clock"></i>
+                                <span>10h</span>
+                                &nbsp; &nbsp;
+                                <i class="fa-regular fa-comment-dots"></i>
+                                <span>23</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="right-side">
+                    <div class="thumbnail">
+                        <img src="assets/Blog Image.png" alt="">
+                        <div class="blogs-info">
+                            <button class="transfer-button">Transfer</button>
+                            <p class="paragraph">Transfer Live: Chlesea in talks <br>
+                                over Kimpenbe transfer</p>
+                            <div class="icon">
+                                <i class="fa-regular fa-clock"></i>
+                                <span>10h</span>
+                                &nbsp; &nbsp;
+                                <i class="fa-regular fa-comment-dots"></i>
+                                <span>23</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="right-side">
+                    <div class="thumbnail">
+                        <img src="assets/Blog Image.png" alt="">
+                        <div class="blogs-info">
+                            <button class="transfer-button">Transfer</button>
+                            <p class="paragraph">Transfer Live: Chlesea in talks <br>
+                                over Kimpenbe transfer</p>
+                            <div class="icon">
+                                <i class="fa-regular fa-clock"></i>
+                                <span>10h</span>
+                                &nbsp; &nbsp;
+                                <i class="fa-regular fa-comment-dots"></i>
+                                <span>23</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="right-side">
+                    <div class="thumbnail">
+                        <img src="assets/Blog Image.png" alt="">
+                        <div class="blogs-info">
+                            <button class="transfer-button">Transfer</button>
+                            <p class="paragraph">Transfer Live: Chlesea in talks <br>
+                                over Kimpenbe transfer</p>
+                            <div class="icon">
+                                <i class="fa-regular fa-clock"></i>
+                                <span>10h</span>
+                                &nbsp; &nbsp;
+                                <i class="fa-regular fa-comment-dots"></i>
+                                <span>23</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="right-side">
+                    <div class="thumbnail">
+                        <img src="assets/Blog Image.png" alt="">
+                        <div class="blogs-info">
+                            <button class="transfer-button">Transfer</button>
+                            <p class="paragraph">Transfer Live: Chlesea in talks <br>
+                                over Kimpenbe transfer</p>
+                            <div class="icon">
+                                <i class="fa-regular fa-clock"></i>
+                                <span>10h</span>
+                                &nbsp; &nbsp;
+                                <i class="fa-regular fa-comment-dots"></i>
+                                <span>23</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
 
     <!-- footer section  -->
 
