mobile devics responsive completed

--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
 <body>
     <!-- header section start  -->
     <header class="container">
-
-        <article class="article-info">
+        <div class="header-details">
             <div class="header-info">
                 <h1 class="header-title">
                     The Greatest <br> show on the <br> earth
@@ -24,13 +23,13 @@
                 <p class="pragraph">Contrary to popular belief, Lorem Ipsum is not simply <br>
                     random text. It has roots in a piece of classical Latin literature <br>
                     from 45 BC, making it over 2000 years old.</p>
+                <p class="pragraph pragraph-1">Contrary to popular belief, is not simply random text.</p>
                 <button class="button">Watch Live &nbsp; <span><i class="fa-solid fa-greater-than"></i></span></button>
             </div>
             <div class="header-image">
                 <img src="assets/Banner Image.png" alt="">
             </div>
-        </article>
-
+        </div>
     </header>
 
     <!-- main section  -->
@@ -62,7 +61,7 @@
                 </div>
                 <div class="right-side">
                     <div class="thumbnail">
-                        <img src="assets/Blog Image.png" alt="">
+                        <img src="assets/brazil.jpg" alt="">
                         <div class="blogs-info">
                             <button class="transfer-button">Transfer</button>
                             <p class="paragraph">Transfer Live: Chlesea in talks <br>
@@ -79,7 +78,7 @@
                 </div>
                 <div class="right-side">
                     <div class="thumbnail">
-                        <img src="assets/Blog Image.png" alt="">
+                        <img src="assets/argentina.jpg" alt="">
                         <div class="blogs-info">
                             <button class="transfer-button">Transfer</button>
                             <p class="paragraph">Transfer Live: Chlesea in talks <br>
@@ -208,14 +207,12 @@
         </div>
         <hr>
         <div class="footer-menu">
-            <ul>
-                <li><a href="">Contact Us </a></li>
-                <li><a href="">Terms of Service </a></li>
-                <li><a href="">Privacy Policy </a></li>
-                <li><a href="">Privacy Settings </a></li>
-                <li><a href="">Goal App </a></li>
-                <li><a href="">Goal Live</a></li>
-            </ul>
+            <div><a href="">Contact Us </a></div>
+            <div><a href="">Terms of Service </a></div>
+            <div><a href="">Privacy Policy </a></div>
+            <div><a href="">Privacy Settings </a></div>
+            <div><a href="">Goal App </a></div>
+            <div><a href="">Goal Live </a></div>
         </div>
     </footer>
 </body>
