--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <button class="button">Watch Live &nbsp; <span><i class="fa-solid fa-greater-than"></i></span></button>
             </div>
             <div class="header-image">
-                <img src="assets/Banner Image.png" alt="">
+                <img src="assets/messi.jpg" alt="">
             </div>
         </div>
     </header>
@@ -42,40 +42,6 @@
                 <button class="site-button button-color"><a href="">Blog</a></button>
             </div>
             <div class="right-side-container">
-                <div class="right-side">
-                    <div class="thumbnail">
-                        <img src="assets/Blog Image.png" alt="">
-                        <div class="blogs-info">
-                            <button class="transfer-button">Transfer</button>
-                            <p class="paragraph">Transfer Live: Chlesea in talks <br>
-                                over Kimpenbe transfer</p>
-                            <div class="icon">
-                                <i class="fa-regular fa-clock"></i>
-                                <span>10h</span>
-                                &nbsp; &nbsp;
-                                <i class="fa-regular fa-comment-dots"></i>
-                                <span>23</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="right-side">
-                    <div class="thumbnail">
-                        <img src="assets/brazil.jpg" alt="">
-                        <div class="blogs-info">
-                            <button class="transfer-button">Transfer</button>
-                            <p class="paragraph">Transfer Live: Chlesea in talks <br>
-                                over Kimpenbe transfer</p>
-                            <div class="icon">
-                                <i class="fa-regular fa-clock"></i>
-                                <span>10h</span>
-                                &nbsp; &nbsp;
-                                <i class="fa-regular fa-comment-dots"></i>
-                                <span>23</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
                 <div class="right-side">
                     <div class="thumbnail">
                         <img src="assets/argentina.jpg" alt="">
@@ -95,7 +61,7 @@
                 </div>
                 <div class="right-side">
                     <div class="thumbnail">
-                        <img src="assets/Blog Image.png" alt="">
+                        <img src="assets/brajil.jpg" alt="">
                         <div class="blogs-info">
                             <button class="transfer-button">Transfer</button>
                             <p class="paragraph">Transfer Live: Chlesea in talks <br>
@@ -105,7 +71,7 @@
                                 <span>10h</span>
                                 &nbsp; &nbsp;
                                 <i class="fa-regular fa-comment-dots"></i>
-                                <span>23</span>
+                                <span>323</span>
                             </div>
                         </div>
                     </div>
@@ -122,14 +88,14 @@
                                 <span>10h</span>
                                 &nbsp; &nbsp;
                                 <i class="fa-regular fa-comment-dots"></i>
-                                <span>23</span>
+                                <span>523</span>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="right-side">
                     <div class="thumbnail">
-                        <img src="assets/Blog Image.png" alt="">
+                        <img src="assets/italy.jpg" alt="">
                         <div class="blogs-info">
                             <button class="transfer-button">Transfer</button>
                             <p class="paragraph">Transfer Live: Chlesea in talks <br>
@@ -139,14 +105,14 @@
                                 <span>10h</span>
                                 &nbsp; &nbsp;
                                 <i class="fa-regular fa-comment-dots"></i>
-                                <span>23</span>
+                                <span>153</span>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="right-side">
                     <div class="thumbnail">
-                        <img src="assets/Blog Image.png" alt="">
+                        <img src="assets/france.jpg" alt="">
                         <div class="blogs-info">
                             <button class="transfer-button">Transfer</button>
                             <p class="paragraph">Transfer Live: Chlesea in talks <br>
@@ -156,14 +122,14 @@
                                 <span>10h</span>
                                 &nbsp; &nbsp;
                                 <i class="fa-regular fa-comment-dots"></i>
-                                <span>23</span>
+                                <span>233</span>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="right-side">
                     <div class="thumbnail">
-                        <img src="assets/Blog Image.png" alt="">
+                        <img src="assets/qatar.jpg" alt="">
                         <div class="blogs-info">
                             <button class="transfer-button">Transfer</button>
                             <p class="paragraph">Transfer Live: Chlesea in talks <br>
@@ -173,14 +139,14 @@
                                 <span>10h</span>
                                 &nbsp; &nbsp;
                                 <i class="fa-regular fa-comment-dots"></i>
-                                <span>23</span>
+                                <span>235</span>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="right-side">
                     <div class="thumbnail">
-                        <img src="assets/Blog Image.png" alt="">
+                        <img src="assets/mexico.jpg" alt="">
                         <div class="blogs-info">
                             <button class="transfer-button">Transfer</button>
                             <p class="paragraph">Transfer Live: Chlesea in talks <br>
@@ -190,7 +156,41 @@
                                 <span>10h</span>
                                 &nbsp; &nbsp;
                                 <i class="fa-regular fa-comment-dots"></i>
-                                <span>23</span>
+                                <span>98</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="right-side">
+                    <div class="thumbnail">
+                        <img src="assets/japan.jpg" alt="">
+                        <div class="blogs-info">
+                            <button class="transfer-button">Transfer</button>
+                            <p class="paragraph">Transfer Live: Chlesea in talks <br>
+                                over Kimpenbe transfer</p>
+                            <div class="icon">
+                                <i class="fa-regular fa-clock"></i>
+                                <span>10h</span>
+                                &nbsp; &nbsp;
+                                <i class="fa-regular fa-comment-dots"></i>
+                                <span>99</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="right-side">
+                    <div class="thumbnail">
+                        <img src="assets/uroguay.jpg" alt="">
+                        <div class="blogs-info">
+                            <button class="transfer-button">Transfer</button>
+                            <p class="paragraph">Transfer Live: Chlesea in talks <br>
+                                over Kimpenbe transfer</p>
+                            <div class="icon">
+                                <i class="fa-regular fa-clock"></i>
+                                <span>10h</span>
+                                &nbsp; &nbsp;
+                                <i class="fa-regular fa-comment-dots"></i>
+                                <span>57</span>
                             </div>
                         </div>
                     </div>
