match section updated

--- a/index.html
+++ b/index.html
@@ -197,6 +197,9 @@
                 </div>
             </div>
         </div>
+        <div class="hide-button">
+            <button class="button-2">View All</button>
+        </div>
     </main>
 
     <!-- footer section  -->
