--- a/match.html
+++ b/match.html
@@ -41,143 +41,149 @@
                 <button class="site-button"><a href="">All Group</a></button>
                 <button class="site-button button-color"><a href="">Blog</a></button>
             </div>
-            <div class="right-side-container">
-                <div id="match-info" class="right-side">
-                    <div class="thumbnail">
-                        <div class="thumbnail-container">
-                            <div class="thumbnail-image">
-                                <img src="assets/germany Flag.png" alt="">
-                                <span class="diffrent">VS</span>
-                                <img src="assets/Flag.png" alt="">
-                            </div>
-                            <div class="blogs-info">
-                                <h4 class="match-title">Germany VS France</h4>
-                                <span class="match-date">April 01, 2023, 1.00 AM</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div id="match-info" class="right-side">
-                    <div class="thumbnail">
-                        <div class="thumbnail-container">
-                            <div class="thumbnail-image">
-                                <img src="assets/germany Flag.png" alt="">
-                                <span class="diffrent">VS</span>
-                                <img src="assets/Flag.png" alt="">
-                            </div>
-                            <div class="blogs-info">
-                                <h4 class="match-title">Germany VS France</h4>
-                                <span class="match-date">April 01, 2023, 1.00 AM</span>
+            <div class="upcoming-match">
+                <div class="right-side-container">
+                    <div id="match-info" class="right-side">
+                        <div class="thumbnail">
+                            <div class="thumbnail-container">
+                                <div class="thumbnail-image">
+                                    <img src="assets/germany Flag.png" alt="">
+                                    <span class="diffrent">VS</span>
+                                    <img src="assets/Flag.png" alt="">
+                                </div>
+                                <div class="blogs-info">
+                                    <h4 class="match-title">Germany VS France</h4>
+                                    <span class="match-date">April 01, 2023, 1.00 AM</span>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div id="match-info" class="right-side">
-                    <div class="thumbnail">
-                        <div class="thumbnail-container">
-                            <div class="thumbnail-image">
-                                <img src="assets/germany Flag.png" alt="">
-                                <span class="diffrent">VS</span>
-                                <img src="assets/Flag.png" alt="">
-                            </div>
-                            <div class="blogs-info">
-                                <h4 class="match-title">Germany VS France</h4>
-                                <span class="match-date">April 01, 2023, 1.00 AM</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div id="match-info" class="right-side">
-                    <div class="thumbnail">
-                        <div class="thumbnail-container">
-                            <div class="thumbnail-image">
-                                <img src="assets/germany Flag.png" alt="">
-                                <span class="diffrent">VS</span>
-                                <img src="assets/Flag.png" alt="">
-                            </div>
-                            <div class="blogs-info">
-                                <h4 class="match-title">Germany VS France</h4>
-                                <span class="match-date">April 01, 2023, 1.00 AM</span>
+                    <div id="match-info" class="right-side">
+                        <div class="thumbnail">
+                            <div class="thumbnail-container">
+                                <div class="thumbnail-image">
+                                    <img src="assets/germany Flag.png" alt="">
+                                    <span class="diffrent">VS</span>
+                                    <img src="assets/Flag.png" alt="">
+                                </div>
+                                <div class="blogs-info">
+                                    <h4 class="match-title">Germany VS France</h4>
+                                    <span class="match-date">April 01, 2023, 1.00 AM</span>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div id="match-info" class="right-side">
-                    <div class="thumbnail">
-                        <div class="thumbnail-container">
-                            <div class="thumbnail-image">
-                                <img src="assets/germany Flag.png" alt="">
-                                <span class="diffrent">VS</span>
-                                <img src="assets/Flag.png" alt="">
-                            </div>
-                            <div class="blogs-info">
-                                <h4 class="match-title">Germany VS France</h4>
-                                <span class="match-date">April 01, 2023, 1.00 AM</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div id="match-info" class="right-side">
-                    <div class="thumbnail">
-                        <div class="thumbnail-container">
-                            <div class="thumbnail-image">
-                                <img src="assets/germany Flag.png" alt="">
-                                <span class="diffrent">VS</span>
-                                <img src="assets/Flag.png" alt="">
-                            </div>
-                            <div class="blogs-info">
-                                <h4 class="match-title">Germany VS France</h4>
-                                <span class="match-date">April 01, 2023, 1.00 AM</span>
+                    <div id="match-info" class="right-side">
+                        <div class="thumbnail">
+                            <div class="thumbnail-container">
+                                <div class="thumbnail-image">
+                                    <img src="assets/germany Flag.png" alt="">
+                                    <span class="diffrent">VS</span>
+                                    <img src="assets/Flag.png" alt="">
+                                </div>
+                                <div class="blogs-info">
+                                    <h4 class="match-title">Germany VS France</h4>
+                                    <span class="match-date">April 01, 2023, 1.00 AM</span>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div id="match-info" class="right-side">
-                    <div class="thumbnail">
-                        <div class="thumbnail-container">
-                            <div class="thumbnail-image">
-                                <img src="assets/germany Flag.png" alt="">
-                                <span class="diffrent">VS</span>
-                                <img src="assets/Flag.png" alt="">
-                            </div>
-                            <div class="blogs-info">
-                                <h4 class="match-title">Germany VS France</h4>
-                                <span class="match-date">April 01, 2023, 1.00 AM</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div id="match-info" class="right-side">
-                    <div class="thumbnail">
-                        <div class="thumbnail-container">
-                            <div class="thumbnail-image">
-                                <img src="assets/germany Flag.png" alt="">
-                                <span class="diffrent">VS</span>
-                                <img src="assets/Flag.png" alt="">
-                            </div>
-                            <div class="blogs-info">
-                                <h4 class="match-title">Germany VS France</h4>
-                                <span class="match-date">April 01, 2023, 1.00 AM</span>
+                    <div id="match-info" class="right-side">
+                        <div class="thumbnail">
+                            <div class="thumbnail-container">
+                                <div class="thumbnail-image">
+                                    <img src="assets/germany Flag.png" alt="">
+                                    <span class="diffrent">VS</span>
+                                    <img src="assets/Flag.png" alt="">
+                                </div>
+                                <div class="blogs-info">
+                                    <h4 class="match-title">Germany VS France</h4>
+                                    <span class="match-date">April 01, 2023, 1.00 AM</span>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div id="match-info" class="right-side">
-                    <div class="thumbnail">
-                        <div class="thumbnail-container">
-                            <div class="thumbnail-image">
-                                <img src="assets/germany Flag.png" alt="">
-                                <span class="diffrent">VS</span>
-                                <img src="assets/Flag.png" alt="">
+                    <div id="match-info" class="right-side">
+                        <div class="thumbnail">
+                            <div class="thumbnail-container">
+                                <div class="thumbnail-image">
+                                    <img src="assets/germany Flag.png" alt="">
+                                    <span class="diffrent">VS</span>
+                                    <img src="assets/Flag.png" alt="">
+                                </div>
+                                <div class="blogs-info">
+                                    <h4 class="match-title">Germany VS France</h4>
+                                    <span class="match-date">April 01, 2023, 1.00 AM</span>
+                                </div>
                             </div>
-                            <div class="blogs-info">
-                                <h4 class="match-title">Germany VS France</h4>
-                                <span class="match-date">April 01, 2023, 1.00 AM</span>
+                        </div>
+                    </div>
+                    <div id="match-info" class="right-side">
+                        <div class="thumbnail">
+                            <div class="thumbnail-container">
+                                <div class="thumbnail-image">
+                                    <img src="assets/germany Flag.png" alt="">
+                                    <span class="diffrent">VS</span>
+                                    <img src="assets/Flag.png" alt="">
+                                </div>
+                                <div class="blogs-info">
+                                    <h4 class="match-title">Germany VS France</h4>
+                                    <span class="match-date">April 01, 2023, 1.00 AM</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="match-info" class="right-side">
+                        <div class="thumbnail">
+                            <div class="thumbnail-container">
+                                <div class="thumbnail-image">
+                                    <img src="assets/germany Flag.png" alt="">
+                                    <span class="diffrent">VS</span>
+                                    <img src="assets/Flag.png" alt="">
+                                </div>
+                                <div class="blogs-info">
+                                    <h4 class="match-title">Germany VS France</h4>
+                                    <span class="match-date">April 01, 2023, 1.00 AM</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="match-info" class="right-side">
+                        <div class="thumbnail">
+                            <div class="thumbnail-container">
+                                <div class="thumbnail-image">
+                                    <img src="assets/germany Flag.png" alt="">
+                                    <span class="diffrent">VS</span>
+                                    <img src="assets/Flag.png" alt="">
+                                </div>
+                                <div class="blogs-info">
+                                    <h4 class="match-title">Germany VS France</h4>
+                                    <span class="match-date">April 01, 2023, 1.00 AM</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="match-info" class="right-side">
+                        <div class="thumbnail">
+                            <div class="thumbnail-container">
+                                <div class="thumbnail-image">
+                                    <img src="assets/germany Flag.png" alt="">
+                                    <span class="diffrent">VS</span>
+                                    <img src="assets/Flag.png" alt="">
+                                </div>
+                                <div class="blogs-info">
+                                    <h4 class="match-title">Germany VS France</h4>
+                                    <span class="match-date">April 01, 2023, 1.00 AM</span>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+
+        </div>
+        <div class="hide-button">
+            <button class="button-2">View All</button>
         </div>
     </main>
 
